@@ -36,29 +36,31 @@ void test_093(transaction_base &T)
   }
 
 #ifdef PQXX_HAVE_PQFTABLECOL
-  int x = R.table_column(2),
-      y = R.table_column(1),
-      z = R.table_column(int(0));
+  result::tuple::size_type
+	x = R.table_column(2),
+	y = R.table_column(1),
+	z = R.table_column(int(0));
 
-  PQXX_CHECK_EQUAL(x, 0, "Wrong column number.");
-  PQXX_CHECK_EQUAL(y, 1, "Wrong column number.");
-  PQXX_CHECK_EQUAL(z, 2, "Wrong column number.");
+  PQXX_CHECK_EQUAL(x, 0u, "Wrong column number.");
+  PQXX_CHECK_EQUAL(y, 1u, "Wrong column number.");
+  PQXX_CHECK_EQUAL(z, 2u, "Wrong column number.");
 
   x = R.table_column("x");
   y = R.table_column("y");
   z = R.table_column("z");
 
-  PQXX_CHECK_EQUAL(x, 0, "Wrong number for named column.");
-  PQXX_CHECK_EQUAL(y, 1, "Wrong number for named column.");
-  PQXX_CHECK_EQUAL(z, 2, "Wrong number for named column.");
+  PQXX_CHECK_EQUAL(x, 0u, "Wrong number for named column.");
+  PQXX_CHECK_EQUAL(y, 1u, "Wrong number for named column.");
+  PQXX_CHECK_EQUAL(z, 2u, "Wrong number for named column.");
 
-  int xx = X[0].table_column(int(0)),
-      yx = X[0].table_column(result::tuple::size_type(1)),
-      zx = X[0].table_column("z");
+  result::tuple::size_type
+	xx = X[0].table_column(int(0)),
+	yx = X[0].table_column(result::tuple::size_type(1)),
+	zx = X[0].table_column("z");
 
-  PQXX_CHECK_EQUAL(xx, 0, "Bad result from table_column(int).");
-  PQXX_CHECK_EQUAL(yx, 1, "Bad result from table_column(size_type).");
-  PQXX_CHECK_EQUAL(zx, 2, "Bad result from table_column(string).");
+  PQXX_CHECK_EQUAL(xx, 0u, "Bad result from table_column(int).");
+  PQXX_CHECK_EQUAL(yx, 1u, "Bad result from table_column(size_type).");
+  PQXX_CHECK_EQUAL(zx, 2u, "Bad result from table_column(string).");
 
   for (result::tuple::size_type i=0; i<R[0].size(); ++i)
     PQXX_CHECK_EQUAL(
